--- a/_posts/2013-07-22-dummy-post-6.md
+++ b/_posts/2013-07-22-dummy-post-6.md
@@ -12,6 +12,8 @@ tempor incididunt ut labore et dolore magna aliqua."
 image: "/assets/post-images/IMG_0806.jpg"
 tags: dummy, post
 category: content
+focal-horz: right-5
+focal-vert: up-2
 ---
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
