--- a/_posts/2013-07-22-dummy-post-4.md
+++ b/_posts/2013-07-22-dummy-post-4.md
@@ -12,6 +12,8 @@ tempor incididunt ut labore et dolore magna aliqua."
 image: "/assets/post-images/IMG_0750.jpg"
 tags: dummy, post
 category: content
+focal-horz: right-3
+focal-vert: up-4
 ---
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
