week 8 tech blog

--- a/_posts/2015-01-11-dbc-c3.md
+++ b/_posts/2015-01-11-dbc-c3.md
@@ -1,7 +1,7 @@
 ---
 layout: "dbc-post"
 title: "Personal Thinking Style"
-meta-description: ""
+meta-description: "Strangely, this internet quiz didn't nail it."
 meta-robots: "noodp, noydir"
 categories: "dbc"
 ---
