--- a/_posts/2015-01-31-gps1-2.md
+++ b/_posts/2015-01-31-gps1-2.md
@@ -1,7 +1,7 @@
 ---
 layout: "dbc-post"
 title: "Pair Programming at DBC"
-meta-description: ""
+meta-description: "Pair programming is great practice for getting comfortable with coding and to learn from and teach each other."
 meta-robots: "noodp, noydir"
 categories: "dbc"
 ---
