add images to all blog posts:

--- a/_posts/2015-01-11-dbc-c3.md
+++ b/_posts/2015-01-11-dbc-c3.md
@@ -4,6 +4,7 @@ title: "Personal Thinking Style"
 meta-description: "Strangely, this internet quiz didn't nail it."
 meta-robots: "noodp, noydir"
 categories: "dbc"
+image: "/assets/post-images/2015-01-11-dbc-c3.jpg"
 ---
 <h4>Phase 0 Unit 1 Week 3 | Cultural Blog #3</h4>
 <span class="meta">Jan 11, 2015</span>
