--- a/_posts/2015-01-18-dbc-c4.md
+++ b/_posts/2015-01-18-dbc-c4.md
@@ -4,6 +4,7 @@ title: "Women in the Tech Workforce"
 meta-description: "We need more ladies at the meetings so the mens don't have to use the pink cards."
 meta-robots: "noodp, noydir"
 categories: "dbc"
+image: "/assets/post-images/2015-01-18-dbc-c4.jpg"
 ---
 <h4>Phase 0 Unit 2 Week 4 | Cultural Blog #4</h4>
 <span class="meta">Jan 18, 2015</span>
