--- a/_posts/2015-01-18-dbc-t4.md
+++ b/_posts/2015-01-18-dbc-t4.md
@@ -4,6 +4,7 @@ title: "map! Wait"
 meta-description: "Map. Map!. They don't love you like I love you."
 meta-robots: "noodp, noydir"
 categories: "dbc"
+image: "/assets/post-images/2015-01-18-dbc-t4.jpg"
 ---
 <h4>Phase 0 Unit 2 Week 4 | Technical Blog #4</h4>
 <span class="meta">Jan 18, 2015</span>
