--- a/_posts/2015-01-31-gps1-2.md
+++ b/_posts/2015-01-31-gps1-2.md
@@ -4,6 +4,7 @@ title: "Pair Programming at DBC"
 meta-description: "Pair programming is great practice for getting comfortable with coding and to learn from and teach each other."
 meta-robots: "noodp, noydir"
 categories: "dbc"
+image: "/assets/post-images/2015-01-31-gps1-2.jpg"
 ---
 <h4>Phase 0 Unit 1 Week 3 | GPS 1.2</h4>
 <span class="meta">Jan 31, 2015</span>
