--- a/_posts/2015-02-15-dbc-t8-tech.md
+++ b/_posts/2015-02-15-dbc-t8-tech.md
@@ -4,6 +4,7 @@ title: "JavaScript Prototypes, I Think"
 meta-description: "Less of an explanation, more of an exploration."
 meta-robots: "noodp, noydir"
 categories: "dbc"
+image: "/assets/post-images/2015-02-15-dbc-t8-tech.jpg"
 ---
 <h4>Phase 0 Unit 3 Week 8 | Technical Blog #8</h4>
 <span class="meta">Feb 15, 2015</span>
