--- a/_posts/2015-01-11-dbc-t3.md
+++ b/_posts/2015-01-11-dbc-t3.md
@@ -4,6 +4,7 @@ title: "Harrays and Ashes: Keeping Your Ruby Sorted"
 meta-description: "I wanna store me some data and then get it back out again later. How we do that?"
 meta-robots: "noodp, noydir"
 categories: "dbc"
+image: "/assets/post-images/2015-01-11-dbc-t3.jpg"
 ---
 <h4>Phase 0 Unit 1 Week 3 | Technical Blog #3</h4>
 <!-- Date format Dec 14, 2014 -->
