--- a/_posts/archive-2015-01-31-gps1-2.md
+++ b/_posts/archive-2015-01-31-gps1-2.md
@@ -6,6 +6,6 @@ meta-robots: "noodp, noydir"
 categories: "dbc"
 image: "/assets/post-images/2015-01-31-gps1-2.jpg"
 ---
-<h4>Phase 0 Unit 1 Week 3 | GPS 1.2</h4>
+<!-- <h4>Phase 0 Unit 1 Week 3 | GPS 1.2</h4>
 <span class="meta">Jan 31, 2015</span>
-<a href="http://jannypie.github.io/blog/gps1-2.html" title="Read more">Read this blog post</a>
+<a href="http://jannypie.github.io/blog/gps1-2.html" title="Read more">Read this blog post</a> -->
